refactor : GCP 서버 주소 허용